# ARIMA_ict_transport

./: README.md
ARIMA/: main.py  pyproject.toml  requirements.txt
ARIMA/lab2/: ACF_PACF.py  lab2_preprocessing_createCSV.py  rolling_stats.py  stationarity_unit_root.py  step_6.py  step_6_v2.py  step_6_v3.py  step_7a.py  step_7b.py  step_8.py
ARIMA/lab2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ARIMA/lab2/Frankfurt/: Frankfurt.csv
ARIMA/lab2/Milano/: Milano.csv  dataMilano.xslx
ARIMA/lab2/New York City/: New York City.csv
preprocessing/: 1_6_new.py  Exercise_1.py  Lab1-Step2-1.py  Lab1-Step2-2 filtraggio.py  Lab1-Step2-2 percentage.py  Lab1-Step2-2.py  Lab1-step1-6.py  Lab1-step2-5.py  Lab1-step2-6 CSV.py  Lab1-step2-6 chart.py  Lab1-step2-7.py  lab1.py
preprocessing/Images/: Parking.csv
