[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
pymongo = "^3.10"
seaborn = "^0.10.0"
sklearn = "^0.0.0"
statsmodels = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
